[gd_scene load_steps=18 format=3 uid="uid://57kg78vgnbw5"]

[ext_resource type="Script" path="res://player/player.gd" id="1_8wev0"]
[ext_resource type="Texture2D" uid="uid://bq4jkkmjilp6b" path="res://art/playerSprites.png" id="1_rju4n"]
[ext_resource type="Texture2D" uid="uid://xtc802q568gu" path="res://art/[SHOOT WITH MUZZLE FLASH] Revolver - Colt 45.png" id="3_6moq0"]
[ext_resource type="Script" path="res://player/gun.gd" id="4_2pqm5"]
[ext_resource type="AudioStream" uid="uid://bk2kow6stppph" path="res://art/sounds/revolver reload.mp3" id="5_aw7cf"]
[ext_resource type="AudioStream" uid="uid://c85pk10wtov4n" path="res://art/sounds/reolverclick.mp3" id="6_hm1ic"]
[ext_resource type="AudioStream" uid="uid://c0fvsvk1wgsiw" path="res://art/sounds/revolvershoot.mp3" id="6_qt3ej"]
[ext_resource type="Script" path="res://player/dialogue.gd" id="8_yyc6g"]
[ext_resource type="Script" path="res://player/dialogue_manager.gd" id="9_yn30t"]

[sub_resource type="Animation" id="Animation_dehxq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(6, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_00u2x"]
resource_name = "walkLeft"
length = 0.5667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(6, 0), Vector2i(7, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_640hy"]
resource_name = "walkRight"
length = 0.5667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(6, 0), Vector2i(7, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_34i58"]
_data = {
"RESET": SubResource("Animation_dehxq"),
"walkLeft": SubResource("Animation_00u2x"),
"walkRight": SubResource("Animation_640hy")
}

[sub_resource type="Animation" id="Animation_reqxv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_wy5o0"]
resource_name = "Shoot"
length = 0.33
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-1.78814e-07, 0.0333333, 0.0666667, 0.1, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c3r3n"]
_data = {
"RESET": SubResource("Animation_reqxv"),
"Shoot": SubResource("Animation_wy5o0")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_csk78"]
radius = 17.0
height = 46.0

[node name="Player" type="CharacterBody2D"]
texture_filter = 1
collision_layer = 6
collision_mask = 11
script = ExtResource("1_8wev0")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_rju4n")
flip_h = true
hframes = 15
frame = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_34i58")
}

[node name="Gun" type="Sprite2D" parent="."]
position = Vector2(12, 0)
scale = Vector2(0.644531, 0.681641)
texture = ExtResource("3_6moq0")
hframes = 10
script = ExtResource("4_2pqm5")

[node name="WaitCheck" type="Timer" parent="Gun"]
wait_time = 0.1
one_shot = true
autostart = true

[node name="Cooldown" type="Timer" parent="Gun"]
wait_time = 0.45
one_shot = true

[node name="Reload" type="AudioStreamPlayer" parent="Gun"]
stream = ExtResource("5_aw7cf")
volume_db = -5.0

[node name="NoAmmo" type="AudioStreamPlayer" parent="Gun"]
stream = ExtResource("6_hm1ic")
volume_db = -5.0

[node name="Shoot" type="AudioStreamPlayer" parent="Gun"]
stream = ExtResource("6_qt3ej")
volume_db = -8.0

[node name="GunAnim" type="AnimationPlayer" parent="Gun"]
libraries = {
"": SubResource("AnimationLibrary_c3r3n")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_csk78")

[node name="Dialogue" type="Label" parent="."]
visible = false
z_index = 4
offset_left = -97.0
offset_top = -121.0
offset_right = 99.0
offset_bottom = -29.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 14
text = "placeholdertext
"
horizontal_alignment = 1
vertical_alignment = 2
script = ExtResource("8_yyc6g")

[node name="DialogueManager" type="Control" parent="Dialogue"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("9_yn30t")

[node name="DiaSpacer" type="Timer" parent="Dialogue"]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="Gun/WaitCheck" to="Gun" method="_on_wait_check_timeout"]
[connection signal="timeout" from="Gun/Cooldown" to="Gun" method="_on_cooldown_timeout"]
[connection signal="timeout" from="Dialogue/DiaSpacer" to="Dialogue/DialogueManager" method="_on_dia_spacer_timeout"]
